# streamlit-promb-app-test

./: .gitignore  Dockerfile  LICENSES_THIRD_PARTY  MANIFEST.in  README.md  pyproject.toml
ovo_promb/: __init__.py  demo.py  descriptors_promb.py  design_views.py  formatting.py  main.py  models.py
ovo_promb/envs/: promb.yml
ovo_promb/pipelines/promb/: main.nf  nextflow.config  nextflow_schema.json
ovo_promb/pipelines/promb/local/: nextflow_test.sh
tests/integration_tests/: conftest.py  test_full.py
